--- a/myPlayer/qml.qrc
+++ b/myPlayer/qml.qrc
@@ -5,8 +5,6 @@
         <file>NavBar.qml</file>
         <file>res/qq_music.png</file>
         <file>res/qq-music.png</file>
-        <file>res/audition-icon.png</file>
-        <file>res/aution-icon-green.png</file>
         <file>res/music-icon.png</file>
         <file>res/music-icon-green.png</file>
         <file>res/pc-icon.png</file>
@@ -17,5 +15,33 @@
         <file>res/recent-icon-green.png</file>
         <file>res/video-icon.png</file>
         <file>res/video-icon-green.png</file>
+        <file>res/audition-icon-green.png</file>
+        <file>res/audition-icon.png</file>
+        <file>res/arrow-left.png</file>
+        <file>res/arrow-left-green.png</file>
+        <file>res/arrow-left-grey.png</file>
+        <file>res/arrow-right.png</file>
+        <file>res/arrow-right-green.png</file>
+        <file>res/arrow-right-grey.png</file>
+        <file>res/close.png</file>
+        <file>res/close-green.png</file>
+        <file>res/line-vertical.png</file>
+        <file>res/listen-icon.png</file>
+        <file>res/listen-icon-green.png</file>
+        <file>res/login.png</file>
+        <file>res/max_window.png</file>
+        <file>res/max_window_full_green.png</file>
+        <file>res/max_window_green.png</file>
+        <file>res/max-window_full.png</file>
+        <file>res/min-window.png</file>
+        <file>res/min-window-green.png</file>
+        <file>res/mode-switch.png</file>
+        <file>res/right-rotate.png</file>
+        <file>res/right-rotate-green.png</file>
+        <file>res/search.png</file>
+        <file>res/search-green.png</file>
+        <file>res/single-list.png</file>
+        <file>res/skin.png</file>
+        <file>res/skin-green.png</file>
     </qresource>
 </RCC>
